--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_spinkit: ^5.2.1
+  http: ^1.2.2
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
