Revert "error he error"
This reverts commit e74d4ac2b913eb3d6d67373315323590c49b91ea.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "cmake.sourceDirectory": "E:/GitHub/marriage_bureau_flutter/linux"
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
