--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # firebase_core: latest_version
-  # firebase_auth: latest_version
-  firebase_core: ^3.2.0
-  firebase_auth: ^5.1.2
-  cloud_firestore: ^5.1.0  # If you plan to use Firestore for data storage
+  firebase_core: latest_version
+  firebase_auth: latest_version
+  cloud_firestore: latest_version  # If you plan to use Firestore for data storage
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,7 +42,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   http: ^1.2.2
   dropdown_search: ^5.0.6
-  
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
