--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace = "tech.grv1.marriage_bureau"
+    namespace = "com.example.marriage_bureau_flutter"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -37,18 +37,21 @@ android {
     }
 
     defaultConfig {
-        applicationId "tech.grv1.marriage_bureau"
-        minSdkVersion 23 // Corrected line
-        targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        applicationId = "com.example.marriage_bureau_flutter"
+        // You can update the following values to match your application needs.
+        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        minSdk = flutter.minSdkVersion
+        targetSdk = flutter.targetSdkVersion
+        versionCode = flutterVersionCode.toInteger()
+        versionName = flutterVersionName
     }
 
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig = signingConfigs.debug
         }
     }
 }
@@ -57,10 +60,14 @@ flutter {
     source = "../.."
 }
 
+apply plugin: 'com.android.application'
+// Add this line
+apply plugin: 'com.google.gms.google-services'
+
 dependencies {
+    // Add this line
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
-    // Add the Firebase products you want to use
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
-    // Add other Firebase dependencies as needed
+    // Example: Add the dependencies for the Firebase products you want to use
+    // implementation 'com.google.firebase:firebase-analytics'
 }
+
