--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,3 @@
-buildscript {
-    ext.kotlin_version = '2.0.0'
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath 'com.google.gms:google-services:4.3.10'
-    }
-}
-
 allprojects {
     repositories {
         google()
@@ -27,4 +15,10 @@ subprojects {
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
+buildscript {
+    dependencies {
+        // Add this line
+        classpath 'com.google.gms:google-services:4.3.10'
+    }
 }
